[WIP] Redesign email interface