@@ -1,32 +1,33 @@
 package app.espai.webservice;
 
+import app.espai.businesslogic.PriceManager;
 import app.espai.dao.EventTicketPrices;
 import app.espai.dao.Events;
+import app.espai.dao.Halls;
 import app.espai.dao.PriceCategories;
 import app.espai.dao.ProductionVersions;
 import app.espai.dao.Productions;
 import app.espai.dao.ReservationTickets;
+import app.espai.dao.Reservations;
 import app.espai.dao.Seasons;
+import app.espai.dao.SeatCategories;
 import app.espai.filter.EventFilter;
 import app.espai.filter.EventTicketPriceFilter;
+import app.espai.filter.EventTicketPriceTemplateFilter;
 import app.espai.model.Event;
 import app.espai.model.EventTicketPrice;
-import app.espai.model.PriceCategory;
-import app.espai.model.ProductionVersion;
 import app.espai.model.Season;
 import jakarta.ejb.EJB;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.QueryParam;
-import java.math.BigDecimal;
 import java.util.List;
-import rocks.xprs.types.Monetary;
 
 /**
  *
  * @author rborowski
  */
-@Path("maintainance")
+@Path("maintenance")
 public class MaintenanceWebservice {
 
   @EJB
@@ -50,124 +51,51 @@ public class MaintenanceWebservice {
   @EJB
   private ReservationTickets tickets;
 
-  @GET
-  @Path("fixPriceCategories")
-  public String fixPriceCategories() {
-    if (priceCategories.list().getTotalNumberOfResults() == 0) {
+  @EJB
+  private Reservations reservations;
 
-      PriceCategory p1 = new PriceCategory();
-      p1.setName("Schüler:innen");
-      priceCategories.save(p1);
+  @EJB
+  private Halls halls;
 
-      PriceCategory p2 = new PriceCategory();
-      p2.setName("Lehrer:innen");
-      priceCategories.save(p2);
+  @EJB
+  private SeatCategories seatCategories;
 
-      return "Erstellt.";
-    }
-
-    return "Nichts erstellt.";
-  }
+  @EJB
+  private PriceManager priceManager;
 
   @GET
   @Path("fixPrices")
-  public String fixPrices() {
-
-    List<? extends PriceCategory> priceCatList = priceCategories.list().getItems();
-    PriceCategory student = null;
-    PriceCategory teacher = null;
-
-    for (PriceCategory p : priceCatList) {
-      if (p.getName().equals("Schüler:innen")) {
-        student = p;
-      } else {
-        teacher = p;
-      }
-    }
-
-    if (student == null || teacher == null) {
-      return "Preiskategorien unvollständig.";
-    }
-
-    List<? extends Event> eventList = events.list().getItems();
-
-    int counter = 0;
-    for (Event e : eventList) {
-
-      EventTicketPriceFilter filter = new EventTicketPriceFilter();
-      filter.setEvent(e);
-
-      List<EventTicketPrice> prices = ticketPrices.list(filter).getItems();
-
-      if (prices.isEmpty()) {
-        EventTicketPrice ps = new EventTicketPrice();
-        ps.setEvent(e);
-        ps.setPriceCategory(student);
-        ps.setPrice(new Monetary("4.50", "EUR"));
-        ticketPrices.save(ps);
-
-        EventTicketPrice pt = new EventTicketPrice();
-        pt.setEvent(e);
-        pt.setPriceCategory(teacher);
-        pt.setPrice(new Monetary(BigDecimal.ZERO, "EUR"));
-        ticketPrices.save(pt);
-
-        counter++;
-      }
-    }
-
-    return counter + " Events ergaenzt.";
-  }
-
-  @GET
-  @Path("addRequiredChildren")
-  public String addChildEvents(
-          @QueryParam("seasonId") long seasonId,
-          @QueryParam("productionVersion") long productionVersionId,
-          @QueryParam("childVersion") long childId,
-          @QueryParam("mandatory") boolean mandatory) {
-
-    int counter = 0;
+  public String fixPrices(@QueryParam("seasonId") Long seasonId) {
 
     Season season = seasons.get(seasonId);
-    ProductionVersion main = productionVersions.get(productionVersionId);
-    ProductionVersion child = productionVersions.get(childId);
+    if (season == null) {
+      return "Season nicht gefunden.";
+    }
 
     EventFilter eventFilter = new EventFilter();
     eventFilter.setSeason(season);
-    eventFilter.setProduction(main);
-
+    eventFilter.setReservable(Boolean.TRUE);
+    eventFilter.setParentEventIsNull(Boolean.TRUE);
     List<Event> eventList = events.list(eventFilter).getItems();
-    for (Event e : eventList) {
-      boolean alreadyCreated = false;
 
-      EventFilter childFilter = new EventFilter();
-      childFilter.setParentEvent(e);
+    int counter = 0;
 
-      List<Event> childEventList = events.list(childFilter).getItems();
-      for (Event c : childEventList) {
-        if (c.getProduction().getId() == childId) {
-          alreadyCreated = true;
-          break;
-        }
+    for (Event event : eventList) {
+
+      EventTicketPriceFilter ticketPriceFilter = new EventTicketPriceTemplateFilter();
+      ticketPriceFilter.setEvent(event);
+      List<EventTicketPrice> existingTicketPrices = ticketPrices.list(ticketPriceFilter).getItems();
+      if (!existingTicketPrices.isEmpty()) {
+        continue;
       }
 
-      if (!alreadyCreated) {
-        Event c = new Event();
-        c.setSeason(season);
-        c.setParentEvent(e);
-        c.setDate(e.getDate());
-        c.setTime(e.getTime());
-        c.setHall(e.getHall());
-        c.setProduction(child);
-        c.setMandatory(mandatory);
-        events.save(c);
-
+      List<EventTicketPrice> newTicketPrices = priceManager.getPrices(event);
+      for (EventTicketPrice p : newTicketPrices) {
+        ticketPrices.save(p);
         counter++;
       }
     }
 
-    return "%d Einträge erstellt".formatted(counter);
+    return String.format("%d Preise ergänzt", counter);
   }
-
 }
